--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -178,6 +178,16 @@
             </div>
             <div class="card earlyBird">
                 <span class="spanCard1"></span>
+                <h3>Last call</h3>
+                <p class="cardUp">From April 1st 2025 to August 10th 2025</p>
+                <p class="precio Up">€190</p>
+                <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
+                <p class="precio Dw">€140</p>
+                <p class="cardD">Cubs</p>
+                <a class="btnInsc btnReg btnCard btnNO " href="/inscription">Register</a>
+                </div>
+            <div class="card lastCall ">
+                <span class="spanCard"></span>
             <h3>SecondCall</h3>
             <p class="cardUp">From February 1st 2025 to March 31st 2025</p>
             <p class="precio Up">€170</p>
@@ -187,15 +197,7 @@
             <a class="btnInsc btnReg btnCard " href="/inscription">Register</a>
         </div>
             
-            <div class="card lastCall">
-                <h3>Last call</h3>
-                <p class="cardUp">From April 1st 2025 to August 10th 2025</p>
-                <p class="precio Up">€190</p>
-                <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
-                <p class="precio Dw">€140</p>
-                <p class="cardD">Cubs</p>
-                <a class="btnInsc btnReg btnCard btnNO " href="/inscription">Register</a>
-                </div>
+            
             </div>
         </div>
         <div class="IcoWhatsDesk"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhatsDesk" src="/resources/img/logoWhatsDesk.png" alt="IconoWhats"></a></div>
