--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -50,6 +50,12 @@
                 <p>This tourist destination is characterized by its tranquility, with wide beaches of warm waters and a relaxed atmosphere, ideal for those looking to escape the hustle and bustle of big cities. The town offers a variety of accommodation, restaurants, and outdoor activities, such as coastal walks and water sports. Santa Clara del Mar is popular among both tourists seeking rest and those who enjoy the natural beauty of the region.
                 </p>
                 <p class="mdqMoreInfoPbottom"><strong>for more information</strong></p><a href="https://santaclaradelmar.com/" target="_blank">CLICK HERE</a>
+            </div> <div class="santaClaraMoreInfo">
+                <h3>Mar Chiquita</h3>
+                <img src="/resources/img/Marchiquita.jpg" alt="Santa Clara del Mar beach">
+                <p>Mar Chiquita is a peaceful coastal town in Argentina, located 40 km north of Mar del Plata. Known for its "albufera" — a unique saltwater lagoon — it offers a natural setting ideal for relaxing, water sports, fishing, and birdwatching. It’s a perfect destination to combine a tournament with outdoor activities. With its family-friendly vibe, quiet beaches, and local cuisine, it’s a great place to spend three days enjoying both competition and nature. Easily accessible via Route 11 from Mar del Plata or Buenos Aires.
+                </p>
+                <p class="mdqMoreInfoPbottom"><strong>for more information</strong></p><a href="http://marchiquita.tur.ar/web/eventos" target="_blank">CLICK HERE</a>
             </div>
             <h2 class="subtitle">Hotels</h2>
             <div class="turismHotel">
