--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -80,6 +80,13 @@
             onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
             </button>
         </div>
+        <div class="extraLinks">
+            <h4>Please Check Everyday   </h4>
+            <div class="links">
+                <div class="dailyScore"><a href="https://docs.google.com/spreadsheets/d/13zvVStaXGVmeYkmGwaTmH3ZEF7xzokP1FaJn5y7Vn3c/edit?usp=sharing" target="_blank">Daily Score Table</a></div>
+            <div class="shootingOrder"><a href="https://docs.google.com/spreadsheets/d/1WSXQFPmaxI-JM8kh358rGV91yea8xmlnoVmXzvZtLRI/edit?gid=0#gid=0" target="_blank">Daily Shooting Schedule</a></div>
+            </div>
+        </div>
         <div class="homeSchedule">
             <div class="schlL">
                 <h2 class="subtitle">Activity schedule</h2>
