--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -289,6 +289,40 @@ main{
 .pMsg{
     color: #008080;;
 }
+/* Home links */
+.extraLinks{
+    display: none   ;
+}
+.extraLinks h4{
+    text-align: center;
+    margin-bottom: 1rem;
+    font-size:2rem;
+}
+.links{
+    height: 6rem;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.dailyScore , .shootingOrder {
+    width: 25%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #008080;
+    background-color: #008080;
+}
+.dailyScore a, .shootingOrder a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.5rem;
+}.dailyScore a:hover, .shootingOrder a:hover {
+    color: #fff;
+    text-decoration: underline
+}
 /* Home Schedule */
 .homeSchedule{
     width: 90%;
@@ -705,6 +739,7 @@ main{
 
 
 .btnInsc{
+    display: none;
     border: none;
     padding: .5rem 2rem;
     border-radius: 25px;
