--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -23,7 +23,7 @@
         <nav class="navbar">
                     <ul class="lista">
                         <li><a class="linkNav" href="/">HOME</a></li>
-                        <li><a class="linkNav" href="/inscription">REGISTRATION</a></li>
+                        <li><a class="linkNav linkRegistration" href="#">REGISTRATION</a></li>
                         <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
                         <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li> 
@@ -173,6 +173,8 @@
                 <span><p>The tournament starts on Monday 3rd of November 2025 until Saturday 8th of November 2025 <br></p><a href="/itinerario">SEE MORE</a> </span>
                 <span><p>The tournament takes place at Santa Clara del Mar Sport center, Buenos Aires, Argentina <br></p><a href="/ubicacion">SEE MORE</a></span>
             </div>
+            <div class="bookingDuo">
+                <h4>The registration period has now closed</h4>
             <div class="booking">
             <div class="card  secondGroup">
                 <span class="spanCard"></span>
@@ -184,16 +186,15 @@
                 <p class="cardD">Cubs</p>
             </div>
             <div class="card earlyBird">
-                <span class="spanCard1"></span>
+                <span class="spanCard"></span>
                 <h3>Last call</h3>
                 <p class="cardUp">From April 1st 2025 to August 10th 2025</p>
                 <p class="precio Up">€190</p>
                 <p class="cardDown">Adults - Juniors - Veterans - Seniors</p>
                 <p class="precio Dw">€140</p>
                 <p class="cardD">Cubs</p>
-                <a class="btnInsc btnReg btnCard " href="/inscription">Register</a>
                 </div>
-            <div class="card lastCall ">
+                <div class="card lastCall ">
                 <span class="spanCard"></span>
             <h3>SecondCall</h3>
             <p class="cardUp">From February 1st 2025 to March 31st 2025</p>
@@ -202,6 +203,8 @@
             <p class="precio Dw">€130</p>
             <p class="cardD">Cubs</p>
         </div>
+            </div>
+            
             
             
             </div>
