--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -60,18 +60,20 @@
                         <h4>Monday</h4>
                         <p>8hs-13hs</p>
                         <p>8hs-13hs</p>
+                        <p>10hs-11hs</p>
                         <p>13hs-14hs</p>
                         <p>15hs-17hs</p>
                     </span><span>
                         <h4>11-03-2025</h4>
                         <p>Registration and Equipment Inspection</p>
-                        <p>Practice range open</p>
+                        <p>Warm up range open</p>
+                        <p>Women in Archery event</p>
                         <p>Captains meeting</p>
                         <p>The March of Nations & Opening ceremony</p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Tuesday</h4>
-                        <p>8hs-16hs</p>
+                        <p>8hs-13hs</p>
                         <p>8hs-16hs</p>
                         <p></p>
                         <p>9hs-12hs</p>
@@ -80,45 +82,43 @@
                     </span><span>
                         <h4>11-04-2025</h4>
                         <p>Registration and equipment inspection</p>
-                        <p>Practice range open</p>
-                        <p class="roundDay">INDOOR ROUND</p>
-                        <p>1st Round</p>
-                        <p>2nd Round</p>
-                        <p>3rd Round</p>
+                        <p>Warm up range open</p>
+                        <p class="roundDay">INDOOR SESSION</p>
+                        <p>Session 1 Group 1 BHR BBR</p>
+                        <p>Session 2 Group 2 TR LB FSR HB</p>
+                        <p>Session 3 Group 3 FU FSC BU BL BHC BBC</p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Wednesday</h4>
-                        <p>8hs-16hs</p>
+                        <p>8hs-15hs</p>
                         <p></p>
-                        <p>8.30hs-11hs</p>
-                        <p>11.30hs-14hs</p>
-                        <p>14.30hs-17hs</p>
-                        <p>17.30hs-20hs</p>
+                        <p>9hs-12hs</p>
+                        <p>12.30hs-15.30hs</p>
+                        <p>16hs-19hs</p>
                     </span><span>
                         <h4>11-05-2025</h4>
-                        <p>Practice Range Open</p>
-                        <p class="roundDay">GROUPS A and B FLINT ROUND</p>
-                        <p>1st Round</p>
-                        <p>2nd Round</p>
-                        <p>3rd Round</p>
-                        <p>4th Round</p>
+                        <p>Warm up  range open</p>
+                        <p class="roundDay">GROUPS A and B FLINT SESSION</p>
+                        <p>Session 1 Group 2-1 TR Group 2-2 LB</p>
+                        <p>Session 2 Group 1-0 BHR </p>
+                        <p>Session 3 Group 1-1 BBR</p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Thursday</h4>
-                        <p>8hs-16hs</p>
+                        <p>8hs-15hs</p>
                         <p></p>
-                        <p>8.30hs-11hs</p>
-                        <p>11.30hs-14hs</p>
-                        <p>14.30hs-17hs</p>
-                        <p>17.30hs-20hs</p>
+                        <p>9hs-12hs</p>
+                        <p></p>
+                        <p>12.30hs-15.30hs</p>
+                        <p>16hs-19hs</p>
                     </span><span>
                         <h4>11-06-2025</h4>
-                        <p>Practice Range Open</p>
+                        <p>Warm up  range open</p>
                         <p class="roundDay">GROUPS C and D FLINT ROUND</p>
-                        <p>1st Round</p>
-                        <p>2nd Round</p>
-                        <p>3rd Round</p>
-                        <p>4th Round</p>
+                        <p>Session 1 Group 2-0 FSR Group 3-2 BBC Group 3-5 BHC</p>
+                        <p></p>
+                        <p>Session 2 Group 3-0 FU  Group 3-4 FSC</p>
+                        <p>Session 3 Group 2-3 HB  Group 3-1 BU  </p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Friday</h4>
@@ -129,11 +129,11 @@
                         <p>16hs-19hs</p>
                     </span><span>
                         <h4>11-07-2025</h4>
-                        <p>Practice range open</p>
-                        <p class="roundDay">INDOOR ROUND</p>
-                        <p>1st Round</p>
-                        <p>2nd Round</p>
-                        <p>3rd Round</p>
+                        <p>Warm up range open</p>
+                        <p class="roundDay">INDOOR SESSION</p>
+                        <p>Session 1 Group 3 FU FSC BU BL BHC BBC</p>
+                        <p>Session 2 Group 1 BHR BBR</p>
+                        <p>Session 3 Group 2 TR LB FSR HB</p>
                     </span></div>
                     <div class="day"><span>
                         <h4>Saturday</h4>
