--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -83,7 +83,7 @@
                         <h4>11-04-2025</h4>
                         <p>Registration and equipment inspection</p>
                         <p>Warm up range open</p>
-                        <p class="roundDay">INDOOR SESSION</p>
+                        <p class="roundDay">INDOOR ROUND</p>
                         <p>Session 1 Group 1 BHR BBR</p>
                         <p>Session 2 Group 2 TR LB FSR HB</p>
                         <p>Session 3 Group 3 FU FSC BU BL BHC BBC</p>
@@ -98,7 +98,7 @@
                     </span><span>
                         <h4>11-05-2025</h4>
                         <p>Warm up  range open</p>
-                        <p class="roundDay">GROUPS A and B FLINT SESSION</p>
+                        <p class="roundDay">FLINT ROUND</p>
                         <p>Session 1 Group 2-1 TR Group 2-2 LB</p>
                         <p>Session 2 Group 1-0 BHR </p>
                         <p>Session 3 Group 1-1 BBR</p>
@@ -114,7 +114,7 @@
                     </span><span>
                         <h4>11-06-2025</h4>
                         <p>Warm up  range open</p>
-                        <p class="roundDay">GROUPS C and D FLINT ROUND</p>
+                        <p class="roundDay">FLINT ROUND</p>
                         <p>Session 1 Group 2-0 FSR Group 3-2 BBC Group 3-5 BHC</p>
                         <p></p>
                         <p>Session 2 Group 3-0 FU  Group 3-4 FSC</p>
@@ -130,7 +130,7 @@
                     </span><span>
                         <h4>11-07-2025</h4>
                         <p>Warm up range open</p>
-                        <p class="roundDay">INDOOR SESSION</p>
+                        <p class="roundDay">INDOOR ROUND</p>
                         <p>Session 1 Group 3 FU FSC BU BL BHC BBC</p>
                         <p>Session 2 Group 1 BHR BBR</p>
                         <p>Session 3 Group 2 TR LB FSR HB</p>
