--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -98,6 +98,7 @@
                         <ul>
                             <li>8hs - 13hs - Registration and equipment inspection </li>
                             <li>8hs - 13hs - Practice range open</li>
+                            <li>10hs - 11hs - Women in archery event</li>
                             <li>13hs - 14hs - Captains meeting </li>
                             <li>15hs - 17hs - The March of Nations & Opening ceremony </li>
                         </ul>
@@ -107,12 +108,12 @@
                     <button class="daySchl">Tuesday 11-04-2025</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>8hs - 16hs - Registration and equipment inspection</li>
-                            <li>8hs - 16hs - Practice range open </li>
+                            <li>8hs - 13hs - Registration and equipment inspection</li>
+                            <li>8hs - 17hs - Practice range open </li>
                             <li class="roundTipe"><strong>INDOOR ROUND</strong></li>
-                            <li>9hs - 12hs - 1st Round </li>
-                            <li>12.30hs - 15.30hs - 2nd Round</li>
-                            <li>16hs - 19hs - 3rd Round</li>
+                            <li>9hs - 12hs - Session 1 Group 1 BHR BBR</li>
+                            <li>13hs - 16hs - Session 2 Group 2 TR LB FSR HB</li>
+                            <li>17hs - 20hs - Session 3 Group 3 FU FSC BU BL BHC BBC</li>
                         </ul>
                     </div>
                 </div>
@@ -120,12 +121,11 @@
                     <button class="daySchl">Wednesday 11-05-2025</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>8hs - 16hs - Practice Range Open </li>
-                            <li class="roundTipe"><strong>GROUPS A and B FLINT ROUND</strong></li>
-                            <li>8.30hs - 11hs - 1st Round </li>
-                            <li>11.30hs - 14hs - 2nd Round</li>
-                            <li>14.30hs - 17hs - 3rd Round</li>
-                            <li>17.30hs - 20hs - 4th Round</li>
+                            <li>8hs - 15hs - Practice Range Open </li>
+                            <li class="roundTipe"><strong>FLINT ROUND</strong></li>
+                            <li>9hs - 12hs - Session 1 Group 2-1 TR Group 2-2 LB</li>
+                            <li>13hs - 16hs - Session 2 Group 1-0 BHR</li>
+                            <li>17hs - 20hs - Session 3 Group 1-1 BBR</li>
                         </ul>
                     </div>
                 </div>
@@ -133,12 +133,11 @@
                     <button class="daySchl">Thursday 11-06-2025</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>8hs - 16hs - Practice Range Open </li>
-                            <li class="roundTipe"><strong>GROUPS C and D FLINT ROUND</strong></li>
-                            <li>8.30hs - 11hs - 1st Round </li>
-                            <li>11.30hs - 14hs - 2nd Round</li>
-                            <li>14.30hs - 17hs - 3rd Round</li>
-                            <li>17.30hs - 20hs - 4rd Round</li>
+                            <li>8hs - 17hs - Practice Range Open </li>
+                            <li class="roundTipe"><strong>FLINT ROUND</strong></li>
+                            <li>9hs - 12hs - Session 1 Group 2-0 FSR Group 3-2 BBC Group 3-5 BHC</li>
+                            <li>13hs - 16hs - Session 2 Group 3-0 FU Group 3-4 FSC</li>
+                            <li>17hs - 20hs - Session 3 Group 2-3 HB Group 3-1 BU</li>
                         </ul>
                     </div>
                 </div>
@@ -146,11 +145,11 @@
                     <button class="daySchl">Friday 11-07-2025</button>
                     <div class="dropdown-content">
                         <ul>
-                            <li>8hs - 16hs - Practice range open </li>
+                            <li>8hs - 17hs - Practice range open </li>
                             <li class="roundTipe"><strong>INDOOR ROUND</strong></li>
-                            <li>9hs - 12hs - 1st Round </li>
-                            <li>12.30hs - 15.30hs - 2nd Round</li>
-                            <li>16hs - 19hs - 3rd Round</li>
+                            <li>9hs - 12hs - Session 1 Group 3 FU FSC BU BL BHC BBC</li>
+                            <li>13hs - 16hs - Session 2 Group 1 BHR BBR</li>
+                            <li>17hs - 20hs - Session 3 Group 2 TR LB FSR HB</li>
                         </ul>
                     </div>
                     </div>
