--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -36,18 +36,19 @@
         <h1 class="title">Schedule</h1>
         <div class="schedule">
             <div class="scheduleInfo">
-                <p><strong> Monday, November 3rd:</strong><br> The event begins with equipment registration and inspection from 8:00am. to
-                    1:00 p.m. At the same time, the practice field will be opened for participants. At 1:00 p.m. the
-                    captains' meeting will take place, where key details of the competition will be discussed.<br> The day
-                    will culminate with the March of Nations and the Opening Ceremony at 3:00 pm, a symbolic event that
+                <p><strong> Monday, November 3rd:</strong><br> The event begins with equipment registration and inspection from 8:00am to
+                    1:00pm At the same time, the practice field will be opened for participants.<br>
+                    From 10.00am to 11am this event is dedicated to recognizing and celebrating the participation of women in the world of archery.<br>
+                    At 1:00pm the
+                    captains' meeting will take place, where key details of the competition will be discussed.<br>
+                    The day will culminate with the March of Nations and the Opening Ceremony at 3:00pm, a symbolic event that
                     will celebrate unity and the competitive spirit.<br>
-                    <strong>Tuesday, November 4th:</strong><br> This day will be dedicated to the official competition. From 8:00 am to 7:00 pm,
+                    <strong>Tuesday, November 4th:</strong><br> This day will be dedicated to the official competition. From 8:00am to 7:00pm,
                     participants will have the opportunity to demonstrate their skills in the first <strong>INDOOR ROUND</strong>. Before each competition round, equipment inspection and registration may be done.<br>
-                    <strong>Wednesday, November 5th and Thursday November 6th:</strong><br>The open practice field and the <strong>FLINT ROUND </strong>divided in the two days, from 8:30 am to 5:30 pm. During these days, competitors will seek to consolidate
+                    <strong>Wednesday, November 5th and Thursday November 6th:</strong><br>The open practice field and the <strong>FLINT ROUND </strong>divided in the two days, from 8:00am to 8.00pm. During these days, competitors will seek to consolidate
                     their positions to advance in the tournament.<br>
                     <strong>Friday, November 7th:</strong><br> It will be a crucial day, with
-                    the practice field open from 8:00am and the last <strong>INDOOR ROUND</strong> of competition that will last until 7:00
-                    pm., where the best athletes will seek to secure a place on the podium.<br>
+                    the practice field open from 8:00am and the last <strong>INDOOR ROUND</strong> of competition that will last until 8:00pm., where the best athletes will seek to secure a place on the podium.<br>
                     <strong>Saturday, November 8th:</strong><br>
                     On this day, the event will close with the Awards Ceremony, which will begin at
                     11:00am, followed by a banquet for the participants.<br>
@@ -74,11 +75,11 @@
                 <div class="day"><span>
                         <h4>Tuesday</h4>
                         <p>8hs-13hs</p>
-                        <p>8hs-16hs</p>
+                        <p>8hs-17hs</p>
                         <p></p>
                         <p>9hs-12hs</p>
-                        <p>12.30hs-15.30hs</p>
-                        <p>16hs-19hs</p>
+                        <p>13hs-16hs</p>
+                        <p>17hs-20hs</p>
                     </span><span>
                         <h4>11-04-2025</h4>
                         <p>Registration and equipment inspection</p>
@@ -93,8 +94,8 @@
                         <p>8hs-15hs</p>
                         <p></p>
                         <p>9hs-12hs</p>
-                        <p>12.30hs-15.30hs</p>
-                        <p>16hs-19hs</p>
+                        <p>13hs-16hs</p>
+                        <p>17hs-20hs</p>
                     </span><span>
                         <h4>11-05-2025</h4>
                         <p>Warm up  range open</p>
@@ -109,8 +110,8 @@
                         <p></p>
                         <p>9hs-12hs</p>
                         <p></p>
-                        <p>12.30hs-15.30hs</p>
-                        <p>16hs-19hs</p>
+                        <p>13hs-16hs</p>
+                        <p>17hs-20hs</p>
                     </span><span>
                         <h4>11-06-2025</h4>
                         <p>Warm up  range open</p>
@@ -122,11 +123,11 @@
                     </span></div>
                 <div class="day"><span>
                         <h4>Friday</h4>
-                        <p>8hs-16hs</p>
+                        <p>8hs-17hs</p>
                         <p></p>
                         <p>9hs-12hs</p>
-                        <p>12.30hs-15.30hs</p>
-                        <p>16hs-19hs</p>
+                        <p>13hs-16hs</p>
+                        <p>17hs-20hs</p>
                     </span><span>
                         <h4>11-07-2025</h4>
                         <p>Warm up range open</p>
