--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -80,6 +80,10 @@
             onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
             </button>
         </div>
+        <div class="merch">
+            <h5 class="subtitle">✨ Our merch is ready! ✨</h5>
+            <p class="merchP"> You can order it out through this link 👉 <a class="merchButton" href="https://docs.google.com/forms/d/e/1FAIpQLSfvUoXZNZlTMfsUDmlssARWG5Yyy43Y9isgwlAbagPu_cRQEA/viewform"  target="_blank">Check Merchandising</a></p>
+        </div>
         <div class="extraLinks">
             <h4>Please Check Everyday   </h4>
             <div class="links">
