--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -82,7 +82,7 @@
         </div>
         <div class="merch">
             <h5 class="subtitle">✨ Our merch is ready! ✨</h5>
-            <p class="merchP"> You can order it out through this link 👉 <a class="merchButton" href="https://docs.google.com/forms/d/e/1FAIpQLSfvUoXZNZlTMfsUDmlssARWG5Yyy43Y9isgwlAbagPu_cRQEA/viewform"  target="_blank">Check Merchandising</a></p>
+            <p class="merchP"> You can order it out through this link 👉 <a class="merchButton" href="https://arqueriaflechar.com.ar/categoria-producto/wiac2025/"  target="_blank">Check Merchandising</a></p>
         </div>
         <div class="extraLinks">
             <h4>Please Check Everyday   </h4>
