--- a/views/home/turism.ejs
+++ b/views/home/turism.ejs
@@ -122,27 +122,37 @@
                     </div>
                 </div>
                 <div class="hotelLeft">
+                    <p>The hotel can be booked for 7 nights or for the number of nights requested.</p>
                     <p>7-day, 6-night program, including daily breakfast</p>
                     <p>Foreigners tax-free (21% off)</p>
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>Room</th>
-                                <th>From </th>
+                                <th>Rate for 7 nights </th>
+                                <th>Rate for 1 night </th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>Double</td>
-                                <td>US$ 456</td>
+                                <td>Single</td>
+                                <td>ARS 455.000,00</td>
+                                <td>ARS 65.000,00</td>
                             </tr>
                             <tr>
+                                <td>Doble</td>
+                                <td>ARS 665.000,00</td>
+                                <td>ARS 95.000,00</td>
+                            </tr><tr>
                                 <td>Triple</td>
-                                <td>US$ 660</td>
+                                <td>ARS 910.000,00</td>
+                                <td>ARS 130.000,00</td>
                             </tr>
                         </tbody>
                     </table>
                     <span>
+                        <p>The reservation is confirmed with at least the payment of the first night of the stay by bank transfer or deposit. The remaining balance must be paid upon arrival at the hotel.</p>
+                    
                         <h4>For reservations</h4>
                         <p>Whatsapp +5492235373923</p>
                         <p>hotelnovi@gmail.com</p>
