--- a/views/home/itinerario.ejs
+++ b/views/home/itinerario.ejs
@@ -101,8 +101,8 @@
                         <p>Warm up  range open</p>
                         <p class="roundDay">FLINT ROUND</p>
                         <p>Session 1 Group 2-1 TR Group 2-2 LB</p>
-                        <p>Session 2 Group 1-0 BHR </p>
-                        <p>Session 3 Group 1-1 BBR</p>
+                        <p>Session 2 Group 1-0 HB BU BL </p>
+                        <p>Session 3 Group 1-1 BBR (less VMBBR)</p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Thursday</h4>
@@ -119,7 +119,7 @@
                         <p>Session 1 Group 2-0 FSR Group 3-2 BBC Group 3-5 BHC</p>
                         <p></p>
                         <p>Session 2 Group 3-0 FU  Group 3-4 FSC</p>
-                        <p>Session 3 Group 2-3 HB  Group 3-1 BU  </p>
+                        <p>Session 3 Group 2-3 BHR Group 3-1 VMBBR  </p>
                     </span></div>
                 <div class="day"><span>
                         <h4>Friday</h4>
