--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -128,8 +128,8 @@
                             <li>8hs - 15hs - Practice Range Open </li>
                             <li class="roundTipe"><strong>FLINT ROUND</strong></li>
                             <li>9hs - 12hs - Session 1 Group 2-1 TR Group 2-2 LB</li>
-                            <li>13hs - 16hs - Session 2 Group 1-0 BHR</li>
-                            <li>17hs - 20hs - Session 3 Group 1-1 BBR</li>
+                            <li>13hs - 16hs - Session 2 Group 1-0 HB BU BL</li>
+                            <li>17hs - 20hs - Session 3 Group 1-1 BBR (less VMBBR)<li>
                         </ul>
                     </div>
                 </div>
@@ -141,7 +141,7 @@
                             <li class="roundTipe"><strong>FLINT ROUND</strong></li>
                             <li>9hs - 12hs - Session 1 Group 2-0 FSR Group 3-2 BBC Group 3-5 BHC</li>
                             <li>13hs - 16hs - Session 2 Group 3-0 FU Group 3-4 FSC</li>
-                            <li>17hs - 20hs - Session 3 Group 2-3 HB Group 3-1 BU</li>
+                            <li>17hs - 20hs - Session 3 Group 2-3 BHR Group 3-1 VMBBR</li>
                         </ul>
                     </div>
                 </div>
