--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -19,16 +19,15 @@
     <header class="header">
         <div class="logo"><a href="/"><img class="logo " src="/resources/img/newLogo.png" alt="logo wiac 2025"></a></div>
         <input type="checkbox" id="menu-toggle">
-        <label for="menu-toggle" class="menu-icon">&#9776;</label> 
+        <label for="menu-toggle" class="menu-icon">&#9776;</label>
         <nav class="navbar">
                     <ul class="lista">
                         <li><a class="linkNav" href="/">HOME</a></li>
-                        <li><a class="linkNav linkRegistration" href="#">REGISTRATION</a></li>
                         <li><a class="linkNav" href="/ubicacion">LOCATION</a></li>
                         <li><a class="linkNav" href="/participants">PARTICIPANTS</a></li>
-                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li> 
-                        <li><a class="linkNav" href="/turism">TOURISM</a></li>  
-                        <li><a class="linkNav" href="/tyc">T&C</a></li>        
+                        <li><a class="linkNav" href="/itinerario">SCHEDULE</a></li>
+                        <li><a class="linkNav" href="/turism">TOURISM</a></li>
+                        <li><a class="linkNav" href="/tyc">T&C</a></li>
                     </ul>
         </nav>
     </header>
@@ -36,7 +35,7 @@
         <div class="bannerHome">
             <img src="resources/img/bannerWIAC.jpg" alt="Torneo de arqueria">
             <p class="hometoptext">Welcome to the</p>
-                <h2 class="homeH2">World Indoor</h2> 
+                <h2 class="homeH2">World Indoor</h2>
                 <h3>Archery Championship 2025</h3>
             <p class="datepara">Nov-03-2025 | Santa Clara del Mar Prov. de Buenos Aires, Argentina </p>
         </div>
@@ -55,7 +54,7 @@
                 <div class="fecha">
                     <span id="fecha"><p>WIAC 2025 starts in: </p></span></div>
 
-                
+
             <div class="cuenta-atras" id="cuenta-atras">
                 <div class="grupo">
                     <p class="grande" id="dias">00</p>
@@ -72,7 +71,7 @@
                 <div class="grupo">
                     <p class="grande" id="segundos">00</p>
                     <p class="chico">seconds</p>
-                </div>  
+                </div>
             </div>
         </div>
         <div class="needHelpContainer">
@@ -80,16 +79,15 @@
             onclick="window.location.href='mailto:wiac2025@gmail.com?Subject=Inquiry%20about%20the%20WIAC%202025%20tournament'">
             </button>
         </div>
-        <div class="merch">
-            <h5 class="subtitle">✨ Our merch is ready! ✨</h5>
-            <p class="merchP"> You can order it out through this link 👉 <a class="merchButton" href="https://arqueriaflechar.com.ar/categoria-producto/wiac2025/"  target="_blank">Check Merchandising</a></p>
-        </div>
         <div class="extraLinks">
             <h4>Please Check Everyday   </h4>
             <div class="links">
-                <div class="dailyScore"><a href="https://docs.google.com/spreadsheets/d/13zvVStaXGVmeYkmGwaTmH3ZEF7xzokP1FaJn5y7Vn3c/edit?usp=sharing" target="_blank">Daily Score Table</a></div>
-            <div class="shootingOrder"><a href="https://docs.google.com/spreadsheets/d/1WSXQFPmaxI-JM8kh358rGV91yea8xmlnoVmXzvZtLRI/edit?gid=0#gid=0" target="_blank">Daily Shooting Schedule</a></div>
+            <div class="shootingOrder"><a href="https://docs.google.com/spreadsheets/d/1WSXQFPmaxI-JM8kh358rGV91yea8xmlnoVmXzvZtLRI/edit?gid=0#gid=0" target="_blank">Daily Shooting Order & Daily Score Board</a><img src="resources/img/shotingOrder.jpg" alt="shoting order qr"></div>
             </div>
+        </div>
+        <div class="merch">
+            <h5 class="subtitle">✨ Our merch is ready! ✨</h5>
+            <p class="merchP"> You can order it out through this link 👉 <a class="merchButton" href="https://arqueriaflechar.com.ar/categoria-producto/wiac2025/"  target="_blank">Check Merchandising</a></p>
         </div>
         <div class="homeSchedule">
             <div class="schlL">
@@ -207,9 +205,9 @@
             <p class="cardD">Cubs</p>
         </div>
             </div>
-            
-            
-            
+
+
+
             </div>
         </div>
         <div class="IcoWhatsDesk"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhatsDesk" src="/resources/img/logoWhatsDesk.png" alt="IconoWhats"></a></div>
@@ -224,7 +222,7 @@
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
             <a class="aFooter" href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
             </div>
-            
+
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
