--- a/views/home/inscription.ejs
+++ b/views/home/inscription.ejs
@@ -54,7 +54,7 @@
                     <li>NOTE: Your own banks charge a commission, and that must be taken into account when sending the registration fee.
                     </li>
                     <li>(*) items in the form need to be complete.</li>
-                    
+
                     <li>Please read the <a class="aForm" href="/tyc">Terms of acceptance </a>before registration.</li>
                 </ul>
             </div>
@@ -213,13 +213,13 @@
                     <label class="acepTYClabel">
                         <input type="checkbox" id="termsCheckbox">
                         I accept the <a href="/tyc">terms & conditions</a>(*)
-                    </label>    
+                    </label>
                         <span class="error-message" id="terms-error"></span>
                 </div>
-                <div class="btnContainerInsc">
+                <!-- <div class="btnContainerInsc">
                     <button class="btnInsc btnReg " type="button" id="checkout-btn" >Register</button>
                     <a class="btnInsc btnCnl" href="/">Cancel</a>
-                </div>
+                </div> -->
             </form>
         </div>
 
@@ -229,7 +229,7 @@
             </button>
         </div>
         <script src="/resources/js/InscValidator.js">
-            
+
         </script>
                 <div class="IcoWhatsDesk"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhatsDesk" src="/resources/img/logoWhatsDesk.png" alt="IconoWhats"></a></div>
                 <div class="IcoWhats"><a href="https://chat.whatsapp.com/G2PhbfqHOpsL6pJDUHDc3t" target="_blank"><img class="logoWhats" src="/resources/img/logoWhats.png" alt="IconoWhats"></a></div>
@@ -245,7 +245,7 @@
             <a href="/tyc" class="privacyFotter">Privacy Policy</a>
             <a class="aFooter" href="mailto:wiac2025@gmail.com?Subject=Consulta%20sobre%20el%20torneo%20WIAC%202024">Contact us</a>
             </div>
-            
+
         </div>
         <p class="parrafoFooter">WIAC 2025. Derechos reservados</p>
     </footer>
