--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -28,7 +28,7 @@
 
 .menu-icon {
     cursor: pointer;
-    display: none; 
+    display: none;
     font-size: 30px;
 }
 
@@ -133,7 +133,7 @@
     overflow: hidden;
     transition: all 0.5s ease-in-out;
     border: 1px solid #008080;
-    
+
     }
 
 .needHelpBtn:hover {
@@ -175,7 +175,7 @@
     align-items: center;
     justify-content: center;
     transition: all 0.5s ease-in-out;
-    
+
 }
 
 .btnHelp:hover::after {
@@ -222,7 +222,7 @@ main{
     height: 80vh;
     object-fit: cover;
     margin: auto;
-    
+
 }
 .homeH2{
     position: absolute;
@@ -294,32 +294,32 @@ main{
 .merchP{
     text-align: center;
     font-size: 1.5rem;
+    display: block;
 }
 
 /* Home links */
-.extraLinks{
-    display: none   ;
-}
 .extraLinks h4{
     text-align: center;
+    margin-top: 3rem;
     margin-bottom: 1rem;
-    font-size:2rem;
+    font-size:4rem;
 }
 .links{
-    height: 6rem;
+    height: 30rem;
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 .dailyScore , .shootingOrder {
-    width: 25%;
+    width: 35%;
     height: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
-    border: 1px solid #008080;
     background-color: #008080;
+    box-shadow: 5px 10px 5px #c1c1c1;
 }
 .dailyScore a, .shootingOrder a {
     color: #fff;
@@ -329,6 +329,18 @@ main{
 }.dailyScore a:hover, .shootingOrder a:hover {
     color: #fff;
     text-decoration: underline
+}
+.dailyScore img{
+    width: 70%;
+    height: auto;
+    margin-left: 1rem;
+    margin-top: 1rem;
+}
+.shootingOrder img{
+    width: 70%;
+    height: auto;
+    margin-left: 1rem;
+    margin-top: 1rem;
 }
 /* Home Schedule */
 .homeSchedule{
@@ -404,7 +416,7 @@ main{
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    
+
 }
 .bookingText h2{
     align-self: start;
@@ -442,7 +454,7 @@ main{
     display: flex;
     align-items: center;
     margin-bottom: 1rem;
-    
+
 }
 .card{
     background: linear-gradient(180deg, rgba(63,66,66,1) 19%, rgba(32,30,30,1) 72%);
@@ -567,7 +579,7 @@ main{
     text-align: center;
     position: relative;
     bottom: 4rem;
-    
+
 }
 .precio{
     font-weight: 400;
@@ -621,7 +633,7 @@ main{
 
 .tablacontainer{
     width: 100%;
-    margin: auto;   
+    margin: auto;
 }
 .containerBotonesForm{
     display: flex;
@@ -670,7 +682,7 @@ main{
 .inscriptionContainer ul{
     list-style: none;
     font-size: 1.2rem;
-    
+
 }
 .inscriptionContainer ul li{
     margin: .3rem;
@@ -727,7 +739,7 @@ main{
     top:.5rem;
     right: 1rem;
     width: fit-content;
-    
+
 }
 .rowForm textarea{
     border: none;
@@ -830,7 +842,7 @@ main{
     text-align: center;
 }
 .ubicacionParraf a{
-    display: block; 
+    display: block;
     background-color: #008080;
     color: #fff;
     padding: .5rem .5rem;
@@ -896,7 +908,7 @@ main{
     font-size: 2rem;
     font-weight: 600;
     color: #008080;
-    
+
 }
 .scheduleDays{
     width:67%;
@@ -915,7 +927,7 @@ main{
     filter: opacity(0.5);
     object-fit: cover;
     height: max-content;
-    
+
 }
 .day{
     width: 100%;
@@ -929,7 +941,7 @@ main{
     text-align: center;
     text-shadow: 2px 2px #c1c1c1;
     font-size: 1.2rem;
-    
+
 }
 .day span{
     width: 50%;
@@ -1101,7 +1113,7 @@ main{
     margin-bottom: 1rem;
 }
 .linkTD{
-    
+
     color: #fff;
     background-color: #ff6800;
     text-decoration: none;
@@ -1117,7 +1129,7 @@ main{
 .linkTD:hover{
     color: #ff6800;
     background-color: #fff;
-    
+
 }
 
 .turismNeed{
@@ -1149,7 +1161,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+
 }
 .regSuccess{
     padding: 2rem;
@@ -1502,5 +1514,39 @@ main{
 }
 .hidden{
     display: none;
+}
+
+/* Home links */
+.extraLinks {
+    height: 60rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.links{
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    justify-content: center;
+    height: auto;
+}
+.dailyScore, .shootingOrder{
+    width: 90%;
+    padding-bottom: .5rem;
+}
+
+.merch{
+    width: 100%;
+    height: max-content;
+}
+.merch h5{
+    display: block;
+    font-size: 2rem;
+    width: max-content;
+}
+
+.merchButton{
+    display: block;
+    width: max-content;
 }
 }
