--- a/views/home/home.ejs
+++ b/views/home/home.ejs
@@ -82,7 +82,7 @@
         <div class="extraLinks">
             <h4>Please Check Everyday   </h4>
             <div class="links">
-            <div class="shootingOrder"><a href="https://docs.google.com/spreadshegit ets/d/13zvVStaXGVmeYkmGwaTmH3ZEF7xzokP1FaJn5y7Vn3c/edit?gid=0#gid=0" target="_blank">Daily Shooting Order & Daily Score Board</a><img src="resources/img/shotingOrder.jpg" alt="shoting order qr"></div>
+            <div class="shootingOrder"><a href="https://docs.google.com/spreadsheets/d/13zvVStaXGVmeYkmGwaTmH3ZEF7xzokP1FaJn5y7Vn3c/edit?gid=0#gid=0" target="_blank">Daily Shooting Order & Daily Score Board</a><img src="resources/img/shotingOrder.jpg" alt="shoting order qr"></div>
             </div>
         </div>
         <div class="merch">
